# whysko

./: .clang-format  .gitignore  CMakeLists.txt  README.md
map/: generate_map.py
src/: CMakeLists.txt  actor.cpp  actor.h  actor_intent.cpp  actor_intent.h  engine.cpp  engine.h  game_scene.cpp  game_scene.h  logging.cpp  logging.h  main.cpp  map.cpp  map.h  map_loader.cpp  map_loader.h  map_tile.h  move_intent.cpp  move_intent.h  resource_manager.cpp  resource_manager.h  scene.h  view_manager.cpp  view_manager.h  wait_intent.cpp  wait_intent.h  waiter.cpp  waiter.h  work_intent.cpp  work_intent.h
src/actors/: actor.cpp  actor.h  actor_intent.cpp  actor_intent.h  intent_id.h  intent_ids.h  move_intent.cpp  move_intent.h  player.cpp  player.h  wait_intent.cpp  wait_intent.h  work_intent.cpp  work_intent.h
src/engine/: collision_manager.cpp  collision_manager.h  debug_view.cpp  debug_view.h  engine.cpp  engine.h  input_manager.cpp  input_manager.h  input_settings.cpp  input_settings.h  logging.h  player_settings.cpp  player_settings.h  resource_manager.cpp  resource_manager.h  settings_repository.cpp  settings_repository.h  view_manager.cpp  view_manager.h
src/entities/: actor.cpp  actor.h  actor_intent.cpp  actor_intent.h  bullet.cpp  bullet.h  entity.cpp  entity.h  move_intent.cpp  move_intent.h  player.cpp  player.h  wait_intent.cpp  wait_intent.h  waiter.cpp  waiter.h  work_intent.cpp  work_intent.h
src/scenes/: game_scene.cpp  game_scene.h  menu_scene.cpp  menu_scene.h  scene.h
src/world/: map.cpp  map.h  map_builder.cpp  map_builder.h  map_tile.cpp  map_tile.h
